--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">SaveTheChildren</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="new_student_entry">New Entry</string>
+    <string name="roster">Roster</string>
+    <string name="student_name">Student Name</string>
+    <string name="teacher_notes">Notes</string>
+    <string name="submit">Submit</string>
 
 </resources>
