--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,9 @@
     <string name="new_student_entry">New Entry</string>
     <string name="roster">Roster</string>
     <string name="student_name">Student Name</string>
+    <string name="tutor_name">Tutor Name</string>
     <string name="teacher_notes">Notes</string>
     <string name="submit">Submit</string>
+    <string name="add">Add</string>
 
 </resources>
