Add new tutor to roster implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="training_subjects">Select Subject</string>
     <string name="training_grades">Select Grade Level</string>
     <string name="training_modules">Select Module</string>
+    <string name ="insert_name"> Please Add Your Name:</string>
+    <string name="submit_tutor_info_button"> Submit Information </string>
 </resources>
 
